force-app/main/default/objects/NBA_Queue__c/fields/Sales_Motion__c.field-meta.xml
<CustomField>
    <fullName>Sales_Motion__c</fullName>
    <label>Sales Motion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Clover Embedded Outreach Motion</fullName>
            </value>
            <value>
                <fullName>Call #1 + Text - Clover Embedded Outreach - Gusto</fullName>
            </value>
            <value>
                <fullName>Free Trial Ending Next 3 Days</fullName>
            </value>
            <value>
                <fullName>Call #2 - Clover Embedded Outreach</fullName>
            </value>
            <value>
                <fullName>Call #3 - Clover Embedded Outreach</fullName>
            </value>
            <value>
                <fullName>Call #4 + Text - Clover Embedded Outreach</fullName>
            </value>
            <value>
                <fullName>Call #5 - Clover Embedded Outreach</fullName>
            </value>
            <value>
                <fullName>Call #6 - Clover Embedded Outreach</fullName>
            </value>
            <value>
                <fullName>Call #7 + Text - Clover Embedded Outreach</fullName>
            </value>
            <value>
                <fullName>Call #1 + Text - Clover Embedded Outreach - QuickBooks</fullName>
            </value>
            <value>
                <fullName>Call #1 + Text - Clover Embedded Outreach - ADP Run</fullName>
            </value>
            <value>
                <fullName>Call #1 + Text - Clover  Outreach - Email Engaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>