force-app/main/default/objects/NBA_Queue__c/fields/Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Sales Rep</relationshipLabel>
    <relationshipName>Sales_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>