force-app/main/default/objects/NBA_Queue__c/fields/Scheduled_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Send_Time__c</fullName>
    <label>Scheduled Send Time</label>
    <description>When the automated outreach should be sent</description>
    <type>DateTime</type>
</CustomField>