force-app/main/default/objects/NBA_Queue__c/fields/Snooze_Reason__c.field-meta.xml
<CustomField>
    <fullName>Snooze_Reason__c</fullName>
    <description>User-provided reason for snoozing this action</description>
    <label>Snooze Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>