force-app/main/default/objects/NBA_Queue__c/fields/Source_Path__c.field-meta.xml
<CustomField>
    <fullName>Source_Path__c</fullName>
    <description>Which creation path generated this action: Immediate (trigger-based), Pipeline Cadence (scheduled batch), or Context Update (CRM event-driven).</description>
    <label>Source Path</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Pipeline Cadence</fullName>
            </value>
            <value>
                <fullName>Context Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>