force-app/main/default/objects/NBA_Queue__c/fields/Stage_Priority__c.field-meta.xml
<CustomField>
    <fullName>Stage_Priority__c</fullName>
    <label>Stage Priority</label>
    <description>Numeric stage rank for selection ordering (1=Closing, 2=Consult, 3=Connect, 4=New)</description>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>