force-app/main/default/objects/NBA_Queue__c/fields/Step_Method__c.field-meta.xml
<CustomField>
    <fullName>Step_Method__c</fullName>
    <description>Method of the completed cadence step (Call, SMS, Email). Stored on audit records for progress tracking.</description>
    <label>Step Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call</fullName>
            </value>
            <value>
                <fullName>SMS</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>