force-app/main/default/objects/NBA_Queue__c/fields/Step_Outcome__c.field-meta.xml
<CustomField>
    <fullName>Step_Outcome__c</fullName>
    <description>Outcome of the completed cadence step. Drives branching logic on next evaluation.</description>
    <label>Step Outcome</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Connected</fullName>
            </value>
            <value>
                <fullName>VM</fullName>
            </value>
            <value>
                <fullName>No_Answer</fullName>
                <label>No Answer</label>
            </value>
            <value>
                <fullName>Sent</fullName>
            </value>
            <value>
                <fullName>Meeting_Scheduled</fullName>
                <label>Meeting Scheduled</label>
            </value>
            <value>
                <fullName>Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>