force-app/main/default/objects/NBA_Queue__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <description>The recommended action subject/title</description>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>