force-app/main/default/objects/NBA_Queue__c/fields/Talk_Time__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time__c</fullName>
    <description>Total Talk Time from the related Talkdesk Activity</description>
    <formula>Talkdesk_Activity__r.talkdesk__Total_Talk_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Total Talk Time from the related Talkdesk Activity</inlineHelpText>
    <label>Talk Time</label>
    <type>Text</type>
</CustomField>