force-app/main/default/objects/NBA_Queue__c/fields/Talk_Time_Sec__c.field-meta.xml
<CustomField>
    <fullName>Talk_Time_Sec__c</fullName>
    <formula>Talkdesk_Activity__r.talkdesk__Total_Talk_Time_sec__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talk Time (Sec)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>