force-app/main/default/objects/NBA_Queue__c/fields/Talkdesk_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Talkdesk_Disposition__c</fullName>
    <description>Talkdesk Dispo from related Talkdesk Activity</description>
    <formula>Talkdesk_Activity__r.talkdesk__DispositionCode__r.talkdesk__Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Talkdesk Dispo from related Talkdesk Activity</inlineHelpText>
    <label>Talkdesk Disposition</label>
    <type>Text</type>
</CustomField>