force-app/main/default/objects/NBA_Queue__c/fields/TargetObject__c.field-meta.xml
<CustomField>
    <fullName>TargetObject__c</fullName>
    <description>API name of the target Salesforce object</description>
    <label>Target Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>