force-app/main/default/objects/NBA_Queue__c/fields/TargetRecordId__c.field-meta.xml
<CustomField>
    <fullName>TargetRecordId__c</fullName>
    <description>18-char Salesforce ID of the target record</description>
    <label>Target Record ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>