force-app/main/default/objects/NBA_Queue__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Name</label>
    <description>Template used for automated SMS/Email send</description>
    <length>255</length>
    <type>Text</type>
</CustomField>