force-app/main/default/objects/NBA_Queue__c/fields/Urgency_Score__c.field-meta.xml
<CustomField>
    <fullName>Urgency_Score__c</fullName>
    <description>Computed urgency score based on cadence stage, time since activity, same-day pressure, and stage pressure signals.</description>
    <label>Urgency Score</label>
    <precision>5</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>