force-app/main/default/objects/NBA_Queue__c/fields/WithinBandScore__c.field-meta.xml
<CustomField>
    <fullName>WithinBandScore__c</fullName>
    <description>Score for tie-breaking within same priority band</description>
    <label>Within Band Score</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>