force-app/main/default/objects/NBA_Queue__c/fields/Workflow_Mode__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Mode__c</fullName>
    <description>Layer 2 mode classification. Pipeline = standard day-to-day workflow. Blitz = campaign-driven high-velocity outreach.</description>
    <label>Workflow Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pipeline</fullName>
                <default>true</default>
                <label>Pipeline</label>
            </value>
            <value>
                <fullName>Blitz</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>