force-app/main/default/objects/NBA_Queue__c/fields/Workstream__c.field-meta.xml
<CustomField>
    <fullName>Workstream__c</fullName>
    <description>NBA workstream category</description>
    <label>Workstream</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Events</fullName>
            </value>
            <value>
                <fullName>Cadence</fullName>
            </value>
            <value>
                <fullName>Motion</fullName>
            </value>
            <value>
                <fullName>Prospecting</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>