force-app/main/default/objects/NBA_Queue__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completed_Date__c</columns>
    <columns>Number_Dialed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>